--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <button>signup today</button>
             </div>
           </div>
-          <div class="card_wrapper">
+          <div class="card_wrapper active">
             <div class="card_content">
               <div class="tag_abs">recommended</div>
               <h4>professional</h4>
